Switch to MongoDB Atlas, add ML module, update quiz and result pages